// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository renovateRepository() ensures onboarding pr 1`] = `
Object {
  "res": "done",
  "status": "onboarding",
}
`;

exports[`workers/repository renovateRepository() ensures onboarding pr 2`] = `
Array [
  Object {
    "prTitle": "aaa",
    "type": "pin",
  },
  Object {
    "prTitle": "bbb",
    "type": "pin",
  },
  Object {
    "prTitle": "aaa",
    "type": "minor",
  },
]
`;

exports[`workers/repository renovateRepository() handles baseBranches 1`] = `
Object {
  "res": "done",
  "status": "enabled",
}
`;

exports[`workers/repository renovateRepository() writes 1`] = `
Object {
  "res": "done",
  "status": "enabled",
}
`;
